code scan added

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,3 +16,6 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+- name: SFDX Scan Pull Request
+  uses: mitchspano/sfdx-scan-pull-request@v0.1.11
