--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,5 +17,5 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
-- name: SFDX Scan Pull Request
+name: SFDX Scan Pull Request
   uses: mitchspano/sfdx-scan-pull-request@v0.1.11
