--- a/.github/workflows/Static Analysis.yml
+++ b/.github/workflows/Static Analysis.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
   workflow_dispatch:
+permissions:
+  id-token: write
+  contents: read
+  issues: write
+  pull-requests: write
 jobs:
   analyze:
     runs-on: ubuntu-latest
