--- a/.github/workflows/Static Analysis.yml
+++ b/.github/workflows/Static Analysis.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
   workflow_dispatch:
+permissions: read-all
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -19,7 +20,7 @@ jobs:
       - name: Run SFDX Scanner - Report findings as comments
         uses: mitchspano/sfdx-scan-pull-request@v0.1.11
         with:
-          pmdconfig: ruleset.xml
+          #pmdconfig: ruleset.xml
           severity-threshold: 4
           strictly-enforced-rules: '[{ "engine": "pmd", "category": "Performance", "rule": "AvoidDebugStatements" }]'
         env:
