--- a/.github/workflows/Static Analysis.yml
+++ b/.github/workflows/Static Analysis.yml
@@ -7,6 +7,9 @@ permissions: read-all
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
         with:
