--- a/.github/workflows/Static Analysis.yml
+++ b/.github/workflows/Static Analysis.yml
@@ -26,4 +26,5 @@ jobs:
           #pmdconfig: ruleset.xml
           severity-threshold: 4
           strictly-enforced-rules: '[{ "engine": "pmd", "category": "Performance", "rule": "AvoidDebugStatements" }]'
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
